--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -15,7 +15,6 @@
         android:icon="@drawable/icon_app"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
-        
         <activity android:name="com.bailv.smartdormitory.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.bailv.smartdormitory.SerialService">
-            <intent-filter >
-                <action android:name="org.crazyit.service.FIRST_SERVICE"/>
+
+        <service android:name="com.bailv.smartdormitory.SerialService" >
+            <intent-filter>
+                <action android:name="com.bailv.smartdormitory.SerialService" />
             </intent-filter>
         </service>
     </application>
