--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,9 +13,10 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon_app"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
-        <activity android:name="com.bailv.smartdormitory.MainActivity" >
+        android:label="@string/app_name" >
+        <activity
+            android:name="com.bailv.smartdormitory.MainActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
